--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
 	<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>2015 FGL Kid's Holiday Party</title>
+        <title>2017 FGL Kid's Holiday Party</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,8 +28,9 @@
 
 			<div id="form-div">
 			<div id="subheading">
-				<h4>2015 FGL Kids' Holiday Party</h4>
-				<h5>December 12, 2015 &nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;&nbsp;&nbsp; 11:00 – 2:00  &nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;&nbsp;&nbsp; FGL Head Office</h5>
+				<h4>2017 FGL Kids' Holiday Party</h4>
+				<h5>November 19, 2017 &nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;&nbsp;&nbsp; 8:30AM – 12:00PM  &nbsp;&nbsp;&nbsp;&mdash;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="https://www.google.ca/maps/place/Deerfoot+Inn+%26+Casino/@50.9495439,-113.9831875,15z/data=!4m5!3m4!1s0x0:0x1a1955ecb48ca993!8m2!3d50.9495439!4d-113.9831875">Deerfoot Inn</a></h5>
+				<center><p>Space is limted, availability is first come, first serve.</p></center>
 			</div>
 				<form id="regform">
 
@@ -119,7 +120,7 @@
 		<!-- <script type="text/javascript" src="/js/contact.js"></script> -->
 		<script type="text/javascript" src="/js/jquery.backstretch.min.js"></script>
 		<script type="text/javascript">
-		  $.backstretch("/images/maxresdefault.jpg");
+		  $.backstretch("/images/candycanes.jpg");
 		</script>
 		
 
