change number of adults to dropdown

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 						
 						<tr>
 							<td colspan="3"><label id="label-adult-number"><span class="req">*</span>Number of Adults Attending</label></td>
-							<td colspan="1"><input type="text" class="form-control" id="numberofadults" name="numberofadults" style="width: 40px;"></input></td>
+							<td colspan="1">
+								<!-- <input type="text" class="form-control" id="numberofadults" name="numberofadults" style="width: 40px;"></input> -->
+							    <select class="form-control" name="numberofadults" id="numberofadults">
+								  <option value="1">1</option>
+								  <option value="2">2</option>
+								</select>
+							</td>
 						</tr>
 						
 
